--- a/book-service/package.json
+++ b/book-service/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "user-service",
+  "name": "book-service",
   "version": "1.0.0",
   "scripts": {
     "dev": "ts-node-dev src/server.ts"
   },
   "dependencies": {
-    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "express": "^4.17.1",
     "sequelize": "^6.37.3",
